test/libyul/yulSyntaxTests/eof/extstaticcall_function_in_eof.yul
object "a" {
    code {
        function extstaticcall() {}
    }
}

// ====
// bytecodeFormat: >=EOFv1
// ----
// ParserError 5568: (41-54): Cannot use builtin function name "extstaticcall" as identifier name.
